# Printers-companion

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.base  Dockerfile.mcp  Dockerfile.scheduler  Dockerfile.telegram-bot  Dockerfile.watcher  Dockerfile.worker  README.md  alarm_demo.html  alembic.ini  backfill_session_overview.py  docker-compose.override.yml  docker-compose.yml  import_logs.py  pyproject.toml  recompute_session_times.py  release.sh  requirements.analytics.txt  requirements.base.txt  requirements.heavy.txt  requirements.telegram-runtime.txt  update.ps1  update.sh
.claude/: launch.json
Logs/: .gitignore
analytics/: cross_session.py  data_quality.py  process_health.py  robust_stats.py  signal_stats.py  telemetry_parser.py  thresholds.py
api/: main.py  pagination.py  upload_limits.py
background_reanalysis/: __init__.py  feature_store.py  hypothesis_generator.py  incremental_tracker.py  insight_repository.py  job_planner.py  notification_hooks.py  pattern_mining.py  scheduler.py
cli/: main.py
configs/: default.yaml
core/: analytics.py  preflight.py  query_executor.py  query_planner.py  tolerance.py
deploy/: autostart-windows.bat  com.printers-companion.updater.plist  create_shortcut.ps1  download_faster_whisper_medium.ps1  install-updater-windows.ps1  launch.ps1  run-update-windows.ps1  update.ps1
domain/: __init__.py
mcp_server/: main.py
migrations/: env.py
operator_journal/: __init__.py  api.py  context_timeline.py  journal_entries.py  notifications.py  parser.py  taxonomy.yaml  telegram_api_client.py  (+5 more)
(+195 files in other folders)
