[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printer-log-analytics"
version = "0.3.0"
description = "Extensible industrial log analytics platform for metal 3D printers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "polars>=0.20",
  "duckdb>=0.10",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "redis>=5.0",
  "minio>=7.2",
  "plotly>=5.22",
  "networkx>=3.3",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "python-multipart>=0.0.9",
  "charset-normalizer>=3.3",
  "rq>=1.16",
  "apscheduler>=3.10",
  "watchdog>=4.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
pla = "cli.main:app"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = [
  "api*",
  "cli*",
  "worker*",
  "scheduler*",
  "core*",
  "domain*",
  "parsers*",
  "profiles*",
  "analytics*",
  "operator_journal*",
  "background_reanalysis*",
  "reporting*",
  "storage*",
  "mcp_server*",
]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
